<resources>
    <string name="app_name">MathCalendar</string>
    <string name="action_settings">Settings</string>
    <string name="problem_description">Your math daily problem!</string>
    <string name="back_button">Past Problem</string>
    <string name="next_button">Next Problem</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="title_activity_problem">ProblemActivity</string>
    <string name="no_access">You don\'t have access to this date yet.</string>
    <string name="answer">Answer</string>
    <string name="title_activity_answer">Answer</string>
    <string name="action_back">Back</string>
    <string name="notification_problem_title">Your daily problem is available.</string>
    <string name="notification_problem_detail">Click here to see your daily problem!</string>
    <string name="share_text">Look at this awesome Math\'s problem, try to solve it too.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="forgot">Forgot my password</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="select_time">Select the time that you want to receive the notification:</string>
    <string name="enable_store">You have to enable the store access to your phone. Please go to Settings -> Apps -> MathCalendar -> Permissions and enable it.</string>
    <string name="facebook_app_id">214686515546313</string>
    <string name="error_load_image">There is not problem for weekends or holidays.</string>
    <string name="general_error">Sorry, something unexpected happened.</string>

    <string name="error">BAZINGA</string>
</resources>

