<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.gods.mathcalendar.ProblemActivity"
    tools:showIn="@layout/activity_problem">

    <RelativeLayout
        android:id="@+id/main_frame"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/back_button"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_arrow"
            android:rotation="90"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/date_size"
            android:text="19/01/2016"
            android:id="@+id/currentDate" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/next_button"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/next_arrow"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/next_button"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            android:layout_below="@+id/currentDate"
            android:layout_margin="20dp"
            android:id="@+id/imageLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/problem_description"
                android:id="@+id/problem_image"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:src="@drawable/node"
                />

        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imageLayout"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_below="@id/line1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.dd.CircularProgressButton
                    android:id="@+id/save"
                    android:layout_width="@dimen/button_w"
                    android:layout_height="@dimen/button_h"
                    android:layout_centerInParent="true"
                    android:textColor="@color/cpb_white"
                    android:layout_marginRight="20dp"
                    android:textSize="@dimen/text_size"
                    app:cpb_cornerRadius="32dp"
                    app:cpb_textIdle="@string/save" />

                <com.dd.CircularProgressButton
                    android:id="@+id/share"
                    android:layout_width="@dimen/button_w"
                    android:layout_height="@dimen/button_h"
                    android:layout_centerInParent="true"
                    android:textColor="@color/cpb_white"
                    android:textSize="@dimen/text_size"
                    app:cpb_cornerRadius="32dp"
                    app:cpb_textIdle="@string/share" />


            </LinearLayout>

        </RelativeLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/answer"
            android:layout_below="@id/buttonsLayout"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:textColor="@color/cpb_white"
            android:textSize="@dimen/text_size"
            app:cpb_cornerRadius="32dp"
            app:cpb_textIdle="@string/answer" />

    </RelativeLayout>

</RelativeLayout>
